tests/integration/snapshots/integration__snapshot__cache_poisoning.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(workflow_under_test(\"cache-poisoning/caching-disabled-by-default.yml\")).run()?"
snapshot_kind: text
---
No findings to report. Good job!
