tests/integration/snapshots/integration__snapshot__cant_retrieve.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().output(OutputMode::Stderr).offline(true).unsetenv(\"GH_TOKEN\").args([\"pypa/sampleproject\"]).run()?"
snapshot_kind: text
---
error: can't retrieve repository: pypa/sampleproject
 = note: try removing --offline or passing --gh-token <TOKEN>
